# sms-verify-kit

./: .env.example  .gitignore  README.md  START_HERE.md  docker-compose.yml
.github/workflows/: ci.yml
docs/zh-CN/: aliyun-setup.md  beginner-5min.md  faq.md  getting-started.md  pricing.md  rules.md  scenes.md
examples/: README.md
examples/curl/: test.sh
examples/node/: send_and_verify.js
examples/php/: send_and_verify.php
examples/python/: send_and_verify.py
gateway/: README.md  bootstrap.php  config.example.php
gateway/public/: docs.html  index.php
scripts/: setup.sh
sdk/go/: client.go  go.mod
sdk/node/: package.json
sdk/node/src/: index.js
sdk/php/: composer.json
sdk/php/src/: AliyunPnvsClient.php  EnvLoader.php
sdk/python/: pyproject.toml
sdk/python/sms_verify_kit/: __init__.py  client.py
website/: index.html
